25-08-SBN-109-Sanghamitra-PT-2
Customised as per the schools requirements. Enabled in phases.
Phase 1. 17 Aug 2025.
A.	Science and Social Studies Class V, VI, VII enabled in Hindi Puzzles section.
B.	Maths Class I and II enabled in Telugu Stories and Poems section.

--- a/iconList.ini
+++ b/iconList.ini
@@ -1,9 +1,9 @@
 [storyboxList]
-LANGUAGE_LIST = ["telugu", "english", "hindi"]
+LANGUAGE_LIST = ["telugu", "hindi"]
 
-TELUGUDASH_LIST = ["teluguDash_storyPoem", "teluguDash_bookInParts", "teluguDash_interestingFacts", "teluguDash_puzzles"]
-TELUGUGENRE_LIST = ["teluguGenre_story"]
-TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy", "teluguAge_medium", "teluguAge_high"]
+TELUGUDASH_LIST = ["teluguDash_storyPoem"]
+TELUGUGENRE_LIST = ["teluguGenre_story", teluguGenre_poem]
+TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy"]
 
 TELUGUBIP_LIST = ["teluguBip_bookOne"]
 TELUGUFACTS_LIST = ["teluguFacts_factsBiographies", "teluguFacts_factsScience", "teluguFacts_factsHistory"]
@@ -14,15 +14,15 @@ TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_easy", "teluguPuzzlesAge_medium", "te
 
 
 
-HINDIDASH_LIST = ["hindiDash_storyPoem", "hindiDash_bookInParts", "hindiDash_interestingFacts", "hindiDash_puzzles"]
+HINDIDASH_LIST = ["hindiDash_puzzles"]
 HINDIGENRE_LIST = ["hindiGenre_story"]
 HINDIAGE_LIST = ["hindiAge_veryEasy"]
 
 HINDIBIP_LIST = ["hindiBip_bookOne"]
 HINDIFACTS_LIST = ["hindiFacts_factsBiographies", "hindiFacts_factsScience", "hindiFacts_factsHistory"]
 
-HINDIPUZZLES_LIST = ["hindiPuzzles_wordSearch", "hindiPuzzles_crossWord"]
-HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_easy", "hindiPuzzlesAge_medium", "hindiPuzzlesAge_high"]
+HINDIPUZZLES_LIST = ["hindiPuzzles_kindergarten", "hindiPuzzles_numberPuzzles", "hindiPuzzles_wordSearch", "hindiPuzzles_crossWord"]
+HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_easy", "hindiPuzzlesAge_medium"]
 
 
 
@@ -36,6 +36,7 @@ ENGLISHFACTS_LIST = ["englishFacts_factsBiographies", "englishFacts_factsScience
 
 ENGLISHPUZZLES_LIST = ["englishPuzzles_kindergarten", "englishPuzzles_numberPuzzles", "englishPuzzles_wordSearch", "englishPuzzles_crossWord"]
 ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy", "englishPuzzlesAge_medium", "englishPuzzlesAge_high"]
+
 
 
 
