Some icon edits

--- a/iconList.ini
+++ b/iconList.ini
@@ -2,7 +2,7 @@
 LANGUAGE_LIST = ["telugu", "hindi"]
 
 TELUGUDASH_LIST = ["teluguDash_storyPoem"]
-TELUGUGENRE_LIST = ["teluguGenre_story", teluguGenre_poem]
+TELUGUGENRE_LIST = ["teluguGenre_story", "teluguGenre_poem"]
 TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy"]
 
 TELUGUBIP_LIST = ["teluguBip_bookOne"]
@@ -22,7 +22,7 @@ HINDIBIP_LIST = ["hindiBip_bookOne"]
 HINDIFACTS_LIST = ["hindiFacts_factsBiographies", "hindiFacts_factsScience", "hindiFacts_factsHistory"]
 
 HINDIPUZZLES_LIST = ["hindiPuzzles_kindergarten", "hindiPuzzles_numberPuzzles", "hindiPuzzles_wordSearch", "hindiPuzzles_crossWord"]
-HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_easy", "hindiPuzzlesAge_medium"]
+HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy", "hindiPuzzlesAge_easy", "hindiPuzzlesAge_medium"]
 
 
 
@@ -42,3 +42,4 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
