--- a/iconList.ini
+++ b/iconList.ini
@@ -1,5 +1,5 @@
 [storyboxList]
-LANGUAGE_LIST = ["english", "telugu", "hindi"]
+LANGUAGE_LIST = ["telugu", "english", "hindi"]
 
 TELUGUDASH_LIST = ["teluguDash_storyPoem", "teluguDash_puzzles"]
 TELUGUGENRE_LIST = ["teluguGenre_story", "teluguGenre_poem", "teluguGenre_anything"]
@@ -14,7 +14,7 @@ TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_medium"]
 
 
 
-HINDIDASH_LIST = ["hindiDash_storyPoem", "hindiDash_puzzles"]
+HINDIDASH_LIST = ["hindiDash_puzzles"]
 HINDIGENRE_LIST = ["hindiGenre_story", "hindiGenre_poem", "hindiGenre_anything"]
 HINDIAGE_LIST = ["hindiAge_veryEasy", "hindiAge_easy"]
 
@@ -27,7 +27,7 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy", "hindiPuzzlesAge_easy", "hin
 
 
 
-ENGLISHDASH_LIST = ["englishDash_storyPoem", "englishDash_puzzles"]
+ENGLISHDASH_LIST = ["englishDash_puzzles"]
 ENGLISHGENRE_LIST = ["englishGenre_story", "englishGenre_poem"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy"]
 
@@ -42,5 +42,6 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
 
 
