--- a/iconList.ini
+++ b/iconList.ini
@@ -1,12 +1,12 @@
 [storyboxList]
 LANGUAGE_LIST = ["telugu", "english", "hindi"]
 
-TELUGUDASH_LIST = ["teluguDash_storyPoem", "teluguDash_puzzles"]
+TELUGUDASH_LIST = ["teluguDash_storyPoem","teluguDash_interestingFacts", "teluguDash_puzzles"]
 TELUGUGENRE_LIST = ["teluguGenre_story", "teluguGenre_poem", "teluguGenre_anything"]
 TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy"]
 
 TELUGUBIP_LIST = ["teluguBip_bookOne"]
-TELUGUFACTS_LIST = ["teluguFacts_factsBiographies", "teluguFacts_factsScience", "teluguFacts_factsHistory"]
+TELUGUFACTS_LIST = ["teluguFacts_factsBiographies"]
 
 TELUGUPUZZLES_LIST = ["teluguPuzzles_wordSearch", "teluguPuzzles_crossWord"]
 TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_medium"]
@@ -27,8 +27,8 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy", "hindiPuzzlesAge_easy", "hin
 
 
 
-ENGLISHDASH_LIST = ["englishDash_puzzles"]
-ENGLISHGENRE_LIST = ["englishGenre_story", "englishGenre_poem"]
+ENGLISHDASH_LIST = ["teluguDash_storyPoem", "englishDash_puzzles"]
+ENGLISHGENRE_LIST = ["englishGenre_poem"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy"]
 
 ENGLISHBIP_LIST = ["englishBip_bookOne", "englishBip_bookTwo", "englishBip_bookThree", "englishBip_bookFour"]
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
 
 
 
