--- a/iconList.ini
+++ b/iconList.ini
@@ -27,7 +27,7 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy", "hindiPuzzlesAge_easy", "hin
 
 
 
-ENGLISHDASH_LIST = ["englishDash_storyPoem", "englishDash_puzzles"]
+ENGLISHDASH_LIST = ["englishDash_puzzles"]
 ENGLISHGENRE_LIST = ["englishGenre_poem"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy"]
 
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
 
 
 
