--- a/iconList.ini
+++ b/iconList.ini
@@ -14,8 +14,8 @@ TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_medium"]
 
 
 
-HINDIDASH_LIST = ["hindiDash_puzzles"]
-HINDIGENRE_LIST = ["hindiGenre_story", "hindiGenre_poem", "hindiGenre_anything"]
+HINDIDASH_LIST = ["hindiDash_storyPoem", "hindiDash_puzzles"]
+HINDIGENRE_LIST = ["hindiGenre_story"]
 HINDIAGE_LIST = ["hindiAge_veryEasy", "hindiAge_easy"]
 
 HINDIBIP_LIST = ["hindiBip_bookOne"]
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
 
 
 
