--- a/iconList.ini
+++ b/iconList.ini
@@ -15,7 +15,7 @@ TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_medium"]
 
 
 HINDIDASH_LIST = ["hindiDash_storyPoem", "hindiDash_puzzles"]
-HINDIGENRE_LIST = ["hindiGenre_story"]
+HINDIGENRE_LIST = ["hindiGenre_story", "hindiGenre_poem"]
 HINDIAGE_LIST = ["hindiAge_veryEasy", "hindiAge_easy"]
 
 HINDIBIP_LIST = ["hindiBip_bookOne"]
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
 
 
 
