--- a/iconList.ini
+++ b/iconList.ini
@@ -28,7 +28,7 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy", "hindiPuzzlesAge_easy", "hin
 
 
 ENGLISHDASH_LIST = ["englishDash_storyPoem", "englishDash_puzzles"]
-ENGLISHGENRE_LIST = ["englishGenre_poem"]
+ENGLISHGENRE_LIST = ["englishGenre_story", "englishGenre_poem"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy"]
 
 ENGLISHBIP_LIST = ["englishBip_bookOne", "englishBip_bookTwo", "englishBip_bookThree", "englishBip_bookFour"]
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
 
 
 
