--- a/iconList.ini
+++ b/iconList.ini
@@ -27,11 +27,11 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy", "hindiPuzzlesAge_easy", "hin
 
 
 
-ENGLISHDASH_LIST = ["englishDash_storyPoem", "englishDash_puzzles"]
+ENGLISHDASH_LIST = ["englishDash_storyPoem", "englishDash_bookInParts", "englishDash_puzzles"]
 ENGLISHGENRE_LIST = ["englishGenre_story", "englishGenre_poem"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy"]
 
-ENGLISHBIP_LIST = ["englishBip_bookOne", "englishBip_bookTwo", "englishBip_bookThree", "englishBip_bookFour"]
+ENGLISHBIP_LIST = ["englishBip_bookOne", "englishBip_bookTwo", "englishBip_bookThree"]
 ENGLISHFACTS_LIST = ["englishFacts_factsBiographies", "englishFacts_factsScience", "englishFacts_factsHistory"]
 
 ENGLISHPUZZLES_LIST = ["englishPuzzles_wordSearch", "englishPuzzles_crossWord"]
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
 
 
 
