25-11-SBN-109-Sanghamitra-No pen
Disables all the menus

--- a/iconList.ini
+++ b/iconList.ini
@@ -1,7 +1,7 @@
 [storyboxList]
 LANGUAGE_LIST = ["telugu", "english", "hindi"]
 
-TELUGUDASH_LIST = ["teluguDash_storyPoem", "teluguDash_bookInParts", "teluguDash_interestingFacts", "teluguDash_puzzles"]
+TELUGUDASH_LIST = ["teluguDash_bookInParts"]
 TELUGUGENRE_LIST = ["teluguGenre_story"]
 TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy", "teluguAge_medium", "teluguAge_high"]
 
@@ -14,7 +14,7 @@ TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_easy", "teluguPuzzlesAge_medium", "te
 
 
 
-HINDIDASH_LIST = ["hindiDash_storyPoem", "hindiDash_bookInParts", "hindiDash_interestingFacts", "hindiDash_puzzles"]
+HINDIDASH_LIST = ["hindiDash_bookInParts"]
 HINDIGENRE_LIST = ["hindiGenre_story"]
 HINDIAGE_LIST = ["hindiAge_veryEasy"]
 
@@ -27,7 +27,7 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_easy", "hindiPuzzlesAge_medium", "hindi
 
 
 
-ENGLISHDASH_LIST = ["englishDash_storyPoem", "englishDash_bookInParts", "englishDash_interestingFacts", "englishDash_puzzles"]
+ENGLISHDASH_LIST = ["englishDash_bookInParts"]
 ENGLISHGENRE_LIST = ["englishGenre_story", "englishGenre_poem", "englishGenre_anything"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy", "englishAge_medium", "englishAge_high", "englishAge_veryHigh"]
 
@@ -42,3 +42,4 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
