--- a/iconList.ini
+++ b/iconList.ini
@@ -1,7 +1,7 @@
 [storyboxList]
 LANGUAGE_LIST = ["telugu", "english", "hindi"]
 
-TELUGUDASH_LIST = ["teluguDash_bookInParts", "teluguDash_interestingFacts"]
+TELUGUDASH_LIST = ["teluguDash_bookInParts"]
 TELUGUGENRE_LIST = ["teluguGenre_story"]
 TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy", "teluguAge_medium", "teluguAge_high"]
 
@@ -18,7 +18,7 @@ HINDIDASH_LIST = ["hindiDash_bookInParts"]
 HINDIGENRE_LIST = ["hindiGenre_story"]
 HINDIAGE_LIST = ["hindiAge_veryEasy"]
 
-HINDIBIP_LIST = ["hindiBip_bookOne", "hindiBip_bookTwo"]
+HINDIBIP_LIST = ["hindiBip_bookOne", "hindiBip_bookTwo", "hindiBip_bookThree" ]
 HINDIFACTS_LIST = ["hindiFacts_factsBiographies", "hindiFacts_factsScience", "hindiFacts_factsHistory"]
 
 HINDIPUZZLES_LIST = ["hindiPuzzles_wordSearch", "hindiPuzzles_crossWord"]
@@ -27,11 +27,11 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_easy", "hindiPuzzlesAge_medium", "hindi
 
 
 
-ENGLISHDASH_LIST = ["englishDash_bookInParts", "englishDash_interestingFacts"]
+ENGLISHDASH_LIST = ["englishDash_bookInParts"]
 ENGLISHGENRE_LIST = ["englishGenre_story", "englishGenre_poem", "englishGenre_anything"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy", "englishAge_medium", "englishAge_high", "englishAge_veryHigh"]
 
-ENGLISHBIP_LIST = ["englishBip_bookOne", "englishBip_bookTwo", "englishBip_bookThree"]
+ENGLISHBIP_LIST = ["englishBip_bookOne", "englishBip_bookTwo", "englishBip_bookThree", "englishBip_bookFour" ]
 ENGLISHFACTS_LIST = ["englishFacts_factsBiographies", "englishFacts_factsScience", "englishFacts_factsHistory"]
 
 ENGLISHPUZZLES_LIST = ["englishPuzzles_kindergarten", "englishPuzzles_numberPuzzles", "englishPuzzles_wordSearch", "englishPuzzles_crossWord"]
@@ -42,5 +42,6 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+
 
 
