--- a/iconList.ini
+++ b/iconList.ini
@@ -41,7 +41,8 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 
-EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour"]
+EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour", "eventFive"]
+
 
 
 
