--- a/iconList.ini
+++ b/iconList.ini
@@ -1,5 +1,5 @@
 [storyboxList]
-LANGUAGE_LIST = ["english"]
+LANGUAGE_LIST = ["hindi"]
 
 TELUGUDASH_LIST = ["teluguDash_bookInParts"]
 TELUGUGENRE_LIST = ["teluguGenre_story"]
@@ -14,15 +14,15 @@ TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_easy", "teluguPuzzlesAge_medium", "te
 
 
 
-HINDIDASH_LIST = ["hindiDash_bookInParts"]
+HINDIDASH_LIST = ["hindiDash_interestingFacts", "hindiDash_bookInParts", "hindiDash_puzzles"]
 HINDIGENRE_LIST = ["hindiGenre_story"]
 HINDIAGE_LIST = ["hindiAge_veryEasy"]
 
-HINDIBIP_LIST = ["hindiBip_bookOne", "hindiBip_bookTwo", "hindiBip_bookThree" ]
-HINDIFACTS_LIST = ["hindiFacts_factsBiographies", "hindiFacts_factsScience", "hindiFacts_factsHistory"]
+HINDIBIP_LIST = ["hindiBip_bookOne", "hindiBip_bookTwo", "hindiBip_bookThree", "hindiBip_bookFour" ]
+HINDIFACTS_LIST = ["hindiFacts_factsBiographies", "hindiFacts_factsScience"]
 
-HINDIPUZZLES_LIST = ["hindiPuzzles_wordSearch", "hindiPuzzles_crossWord"]
-HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_easy", "hindiPuzzlesAge_medium", "hindiPuzzlesAge_high"]
+HINDIPUZZLES_LIST = ["hindiPuzzles_kindergarten", "hindiPuzzles_numberPuzzles", "hindiPuzzles_wordSearch", "hindiPuzzles_crossWord"]
+HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy"]
 
 
 
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour", "eventFive"]
+
 
 
 
