26-01-SBN-103-Sanghamitra-No-Pen
Added maths and science class 7-8 in telugu and english IF

--- a/iconList.ini
+++ b/iconList.ini
@@ -1,7 +1,7 @@
 [storyboxList]
-LANGUAGE_LIST = ["hindi"]
+LANGUAGE_LIST = ["english", "hindi", "telugu"]
 
-TELUGUDASH_LIST = ["teluguDash_bookInParts"]
+TELUGUDASH_LIST = ["teluguDash_interestingFacts"]
 TELUGUGENRE_LIST = ["teluguGenre_story"]
 TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy", "teluguAge_medium", "teluguAge_high"]
 
@@ -27,7 +27,7 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy"]
 
 
 
-ENGLISHDASH_LIST = ["englishDash_bookInParts"]
+ENGLISHDASH_LIST = ["englishDash_interestingFacts"]
 ENGLISHGENRE_LIST = ["englishGenre_story", "englishGenre_poem", "englishGenre_anything"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy", "englishAge_medium", "englishAge_high", "englishAge_veryHigh"]
 
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour", "eventFive"]
+
 
 
 
