--- a/iconList.ini
+++ b/iconList.ini
@@ -6,7 +6,7 @@ TELUGUGENRE_LIST = ["teluguGenre_story"]
 TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy", "teluguAge_medium", "teluguAge_high"]
 
 TELUGUBIP_LIST = ["teluguBip_bookOne", "teluguBip_bookTwo", "teluguBip_bookThree"]
-TELUGUFACTS_LIST = ["teluguFacts_factsBiographies", "teluguFacts_factsScience"]
+TELUGUFACTS_LIST = ["teluguFacts_factsBiographies", "teluguFacts_factsScience", "teluguFacts_factsHistory"]
 
 TELUGUPUZZLES_LIST = ["teluguPuzzles_wordSearch", "teluguPuzzles_crossWord"]
 TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_easy", "teluguPuzzlesAge_medium", "teluguPuzzlesAge_high"]
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour", "eventFive"]
+
 
 
 
