26-01-SBN-103-Sanghamitra-No-Pen
Updated Science and Evs in book in parts and events

--- a/iconList.ini
+++ b/iconList.ini
@@ -1,11 +1,11 @@
 [storyboxList]
 LANGUAGE_LIST = ["english", "hindi", "telugu"]
 
-TELUGUDASH_LIST = ["teluguDash_interestingFacts"]
+TELUGUDASH_LIST = ["teluguDash_bookInParts"]
 TELUGUGENRE_LIST = ["teluguGenre_story"]
 TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy", "teluguAge_medium", "teluguAge_high"]
 
-TELUGUBIP_LIST = ["teluguBip_bookOne", "teluguBip_bookTwo", "teluguBip_bookThree"]
+TELUGUBIP_LIST = ["teluguBip_bookOne", "teluguBip_bookTwo", "teluguBip_bookThree", "teluguBip_bookFour"]
 TELUGUFACTS_LIST = ["teluguFacts_factsBiographies", "teluguFacts_factsScience", "teluguFacts_factsHistory"]
 
 TELUGUPUZZLES_LIST = ["teluguPuzzles_wordSearch", "teluguPuzzles_crossWord"]
@@ -14,7 +14,7 @@ TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_easy", "teluguPuzzlesAge_medium", "te
 
 
 
-HINDIDASH_LIST = ["hindiDash_interestingFacts", "hindiDash_bookInParts", "hindiDash_puzzles"]
+HINDIDASH_LIST = ["hindiDash_bookInParts"]
 HINDIGENRE_LIST = ["hindiGenre_story"]
 HINDIAGE_LIST = ["hindiAge_veryEasy"]
 
@@ -27,7 +27,7 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy"]
 
 
 
-ENGLISHDASH_LIST = ["englishDash_interestingFacts"]
+ENGLISHDASH_LIST = ["englishDash_bookInParts"]
 ENGLISHGENRE_LIST = ["englishGenre_story", "englishGenre_poem", "englishGenre_anything"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy", "englishAge_medium", "englishAge_high", "englishAge_veryHigh"]
 
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour", "eventFive"]
+
 
 
 
