--- a/iconList.ini
+++ b/iconList.ini
@@ -1,5 +1,5 @@
 [storyboxList]
-LANGUAGE_LIST = ["hindi", "telugu"]
+LANGUAGE_LIST = ["english", "hindi", "telugu"]
 
 TELUGUDASH_LIST = ["teluguDash_bookInParts"]
 TELUGUGENRE_LIST = ["teluguGenre_story"]
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour", "eventFive"]
+
 
 
 
