26-01-SBN-103-Sanghamitra-No-Pen
Added maths content

--- a/iconList.ini
+++ b/iconList.ini
@@ -1,12 +1,12 @@
 [storyboxList]
 LANGUAGE_LIST = ["telugu", "english", "hindi"]
 
-TELUGUDASH_LIST = ["teluguDash_bookInParts"]
+TELUGUDASH_LIST = ["teluguDash_bookInParts", "teluguDash_interestingFacts"]
 TELUGUGENRE_LIST = ["teluguGenre_story"]
 TELUGUAGE_LIST = ["teluguAge_veryEasy", "teluguAge_easy", "teluguAge_medium", "teluguAge_high"]
 
-TELUGUBIP_LIST = ["teluguBip_bookOne", "teluguBip_bookTwo", "teluguBip_bookThree", "teluguBip_bookFour"]
-TELUGUFACTS_LIST = ["teluguFacts_factsBiographies", "teluguFacts_factsScience", "teluguFacts_factsHistory"]
+TELUGUBIP_LIST = ["teluguBip_bookOne", "teluguBip_bookTwo", "teluguBip_bookThree"]
+TELUGUFACTS_LIST = ["teluguFacts_factsBiographies", "teluguFacts_factsScience"]
 
 TELUGUPUZZLES_LIST = ["teluguPuzzles_wordSearch", "teluguPuzzles_crossWord"]
 TELUGUPUZZLESAGE_LIST = ["teluguPuzzlesAge_easy", "teluguPuzzlesAge_medium", "teluguPuzzlesAge_high"]
@@ -18,7 +18,7 @@ HINDIDASH_LIST = ["hindiDash_bookInParts"]
 HINDIGENRE_LIST = ["hindiGenre_story"]
 HINDIAGE_LIST = ["hindiAge_veryEasy"]
 
-HINDIBIP_LIST = ["hindiBip_bookOne", "hindiBip_bookTwo", "hindiBip_bookThree", "hindiBip_bookFour" ]
+HINDIBIP_LIST = ["hindiBip_bookOne", "hindiBip_bookTwo"]
 HINDIFACTS_LIST = ["hindiFacts_factsBiographies", "hindiFacts_factsScience"]
 
 HINDIPUZZLES_LIST = ["hindiPuzzles_kindergarten", "hindiPuzzles_numberPuzzles", "hindiPuzzles_wordSearch", "hindiPuzzles_crossWord"]
@@ -27,11 +27,11 @@ HINDIPUZZLESAGE_LIST = ["hindiPuzzlesAge_veryEasy"]
 
 
 
-ENGLISHDASH_LIST = ["englishDash_bookInParts"]
+ENGLISHDASH_LIST = ["englishDash_bookInParts", "englishDash_interestingFacts"]
 ENGLISHGENRE_LIST = ["englishGenre_story", "englishGenre_poem", "englishGenre_anything"]
 ENGLISHAGE_LIST = ["englishAge_veryEasy", "englishAge_easy", "englishAge_medium", "englishAge_high", "englishAge_veryHigh"]
 
-ENGLISHBIP_LIST = ["englishBip_bookOne", "englishBip_bookTwo", "englishBip_bookThree", "englishBip_bookFour" ]
+ENGLISHBIP_LIST = ["englishBip_bookOne", "englishBip_bookTwo", "englishBip_bookThree"]
 ENGLISHFACTS_LIST = ["englishFacts_factsBiographies", "englishFacts_factsScience", "englishFacts_factsHistory"]
 
 ENGLISHPUZZLES_LIST = ["englishPuzzles_kindergarten", "englishPuzzles_numberPuzzles", "englishPuzzles_wordSearch", "englishPuzzles_crossWord"]
@@ -42,6 +42,7 @@ ENGLISHPUZZLESAGE_LIST = ["englishPuzzlesAge_veryEasy", "englishPuzzlesAge_easy"
 
 
 EVENT_LIST = ["eventOne", "eventTwo", "eventThree", "eventFour", "eventFive"]
+
 
 
 
